He ajustado mejor el fondo del contenedor pero sigo sin wrapear correctamente

--- a/style.css
+++ b/style.css
@@ -15,20 +15,20 @@
 
 body{
     background-color: var(--pictionBlue);
-
 }
 
-main{
+main{   
+    display: flex;
+    
+    place-content: center;
+    margin: 20px auto auto auto;
+}
+
+.contenedor{
     background-color: rgb(255, 255, 255);
     display: flex;
-    flex-direction: block;
-    /*flex-direction: column; No me wrapea, se queda siempre en columna*/
+    flex-direction: column; /*No me wrapea, se queda siempre en columna*/
     flex-wrap: wrap;
-    place-content: center;
-    width: 80%;
-    align-items: center;
-    margin: 20px auto auto auto;
-    height: 100%;
 }
 
 img{
